<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".DollarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/dolar1"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input"
        tools:ignore="ExtraText"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/n_rupiah"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:inputType="numberDecimal"
        android:lines="1"/>

    <TextView
        android:id="@+id/h_kdolar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/hasil" />


    <Button
        android:id="@+id/c_dolar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/cek" />

</LinearLayout>